Fix meetme slot picker text not fitting on iPhone screen with long time strings

--- a/app/styles/custom.scss
+++ b/app/styles/custom.scss
@@ -1034,6 +1034,8 @@ $side-pad:35px;
                 }
                 span.right{
                     float:right;
+                    font-size:14px;
+                    font-weight:normal;
                 }
             }
         }
